// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<Controls />\` renders correctly when there are multiple existing similarities. 1`] = `
<div>
  <div
    class="sc-AxgMl gMDVEB"
  >
    <div>
      <button
        class="sc-AxjAm sc-AxirZ CUWHb"
      >
        Add
      </button>
    </div>
    <div
      class="sc-AxhCb cBgcGW"
    >
      <div>
        <button
          class="sc-AxjAm sc-AxiKw cgflug"
        >
          Remove
        </button>
      </div>
      <div
        class="sc-AxhUy eVFjRW"
      >
        <div>
          <label
            for="test/a-angle"
          >
            Angle
          </label>
          <input
            id="test/a-angle"
            max="6.2832"
            min="-6.2832"
            step="0.0001"
            type="range"
            value="0.1385"
          />
          <p>
            Min: 
            -2.00π rad
          </p>
          <p>
            Max: 
            2.00π rad
          </p>
          <p>
            Value: 
            <output
              for="test/a-angle"
            >
              0.04π rad
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/a-scale"
          >
            Scale
          </label>
          <input
            id="test/a-scale"
            max="2"
            min="0"
            step="0.05"
            type="range"
            value="0.7791"
          />
          <p>
            Min: 
            0.00
          </p>
          <p>
            Max: 
            2.00
          </p>
          <p>
            Value: 
            <output
              for="test/a-scale"
            >
              0.78
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/a-translation"
          >
            Translation
          </label>
          <input
            id="test/a-translation"
            max="1.5"
            min="0"
            step="0.05"
            type="range"
            value="0.4663"
          />
          <p>
            Min: 
            0.00
          </p>
          <p>
            Max: 
            1.50
          </p>
          <p>
            Value: 
            <output
              for="test/a-translation"
            >
              0.47
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/a-depth"
          >
            Depth
          </label>
          <input
            id="test/a-depth"
            max="8"
            min="0"
            step="1"
            type="range"
            value="3"
          />
          <p>
            Min: 
            0
          </p>
          <p>
            Max: 
            8
          </p>
          <p>
            Value: 
            <output
              for="test/a-depth"
            >
              3
            </output>
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-AxhCb cBgcGW"
    >
      <div>
        <button
          class="sc-AxjAm sc-AxiKw cgflug"
        >
          Remove
        </button>
      </div>
      <div
        class="sc-AxhUy eVFjRW"
      >
        <div>
          <label
            for="test/b-angle"
          >
            Angle
          </label>
          <input
            id="test/b-angle"
            max="6.2832"
            min="-6.2832"
            step="0.0001"
            type="range"
            value="0.4692"
          />
          <p>
            Min: 
            -2.00π rad
          </p>
          <p>
            Max: 
            2.00π rad
          </p>
          <p>
            Value: 
            <output
              for="test/b-angle"
            >
              0.15π rad
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/b-scale"
          >
            Scale
          </label>
          <input
            id="test/b-scale"
            max="2"
            min="0"
            step="0.05"
            type="range"
            value="0.7202"
          />
          <p>
            Min: 
            0.00
          </p>
          <p>
            Max: 
            2.00
          </p>
          <p>
            Value: 
            <output
              for="test/b-scale"
            >
              0.72
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/b-translation"
          >
            Translation
          </label>
          <input
            id="test/b-translation"
            max="1.5"
            min="0"
            step="0.05"
            type="range"
            value="0.7432"
          />
          <p>
            Min: 
            0.00
          </p>
          <p>
            Max: 
            1.50
          </p>
          <p>
            Value: 
            <output
              for="test/b-translation"
            >
              0.74
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/b-depth"
          >
            Depth
          </label>
          <input
            id="test/b-depth"
            max="8"
            min="0"
            step="1"
            type="range"
            value="7"
          />
          <p>
            Min: 
            0
          </p>
          <p>
            Max: 
            8
          </p>
          <p>
            Value: 
            <output
              for="test/b-depth"
            >
              7
            </output>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there are no existing similarities 1`] = `
<div>
  <div
    class="sc-AxgMl gMDVEB"
  >
    <div>
      <button
        class="sc-AxjAm sc-AxirZ CUWHb"
      >
        Add
      </button>
    </div>
  </div>
</div>
`;

exports[`\`<Controls />\` renders correctly when there is one existing similarity 1`] = `
<div>
  <div
    class="sc-AxgMl gMDVEB"
  >
    <div>
      <button
        class="sc-AxjAm sc-AxirZ CUWHb"
      >
        Add
      </button>
    </div>
    <div
      class="sc-AxhCb cBgcGW"
    >
      <div>
        <button
          class="sc-AxjAm sc-AxiKw cgflug"
        >
          Remove
        </button>
      </div>
      <div
        class="sc-AxhUy eVFjRW"
      >
        <div>
          <label
            for="test/subject-angle"
          >
            Angle
          </label>
          <input
            id="test/subject-angle"
            max="6.2832"
            min="-6.2832"
            step="0.0001"
            type="range"
            value="0.1385"
          />
          <p>
            Min: 
            -2.00π rad
          </p>
          <p>
            Max: 
            2.00π rad
          </p>
          <p>
            Value: 
            <output
              for="test/subject-angle"
            >
              0.04π rad
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/subject-scale"
          >
            Scale
          </label>
          <input
            id="test/subject-scale"
            max="2"
            min="0"
            step="0.05"
            type="range"
            value="0.7791"
          />
          <p>
            Min: 
            0.00
          </p>
          <p>
            Max: 
            2.00
          </p>
          <p>
            Value: 
            <output
              for="test/subject-scale"
            >
              0.78
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/subject-translation"
          >
            Translation
          </label>
          <input
            id="test/subject-translation"
            max="1.5"
            min="0"
            step="0.05"
            type="range"
            value="0.4663"
          />
          <p>
            Min: 
            0.00
          </p>
          <p>
            Max: 
            1.50
          </p>
          <p>
            Value: 
            <output
              for="test/subject-translation"
            >
              0.47
            </output>
          </p>
        </div>
        <div>
          <label
            for="test/subject-depth"
          >
            Depth
          </label>
          <input
            id="test/subject-depth"
            max="8"
            min="0"
            step="1"
            type="range"
            value="3"
          />
          <p>
            Min: 
            0
          </p>
          <p>
            Max: 
            8
          </p>
          <p>
            Value: 
            <output
              for="test/subject-depth"
            >
              3
            </output>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
